fitness-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-deployment
  namespace: norah-ns
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: fitnessapp
  template:
    metadata:
      labels:
        app: fitnessapp
    spec:
      containers:
        - name: fitness-container
          image: muralisocial123/fitness-app:v1.0.1
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "256Mi"
              cpu: "350m"
            requests:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: fitness-service
  namespace: norah-ns
spec:
  selector:
    app: fitnessapp
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
