transaction-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-deployment
  namespace: norah-ns
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: transapp
  template:
    metadata:
      labels:
        app: transapp
    spec:
      containers:
        - name: trans-container
          image: muralisocial123/transaction-app:v1.0.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "256Mi"
              cpu: "350m"
            requests:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: norah-ns
spec:
  selector:
    app: transapp
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
