route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: eycart-httproute
  namespace: norah-ns
spec:
  parentRefs:
  - name: norah-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: eycart-service 
      port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flipkart-httproute
  namespace: norah-ns
spec:
  parentRefs:
  - name: norah-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /flipkart
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: flipkart-service 
      port: 80
